--- a/src/main/resources/assets/cozycafe/models/item/apple_juice.json
+++ b/src/main/resources/assets/cozycafe/models/item/apple_juice.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "cozycafe:apple_juice"
+    "layer0": "cozycafe:item/apple_juice"
   }
 }
