--- a/src/main/resources/assets/cozycafe/models/item/apple_pie.json
+++ b/src/main/resources/assets/cozycafe/models/item/apple_pie.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "cozycafe:apple_pie"
+    "layer0": "cozycafe:item/apple_pie"
   }
 }
