fixed some more recipe issues

--- a/src/main/resources/data/cozycafe/recipes/enchanted_golden_apple_juice_recipe.json
+++ b/src/main/resources/data/cozycafe/recipes/enchanted_golden_apple_juice_recipe.json
@@ -9,7 +9,7 @@
       "item": "minecraft:enchanted_golden_apple"
     },
     {
-      "item": "cozyingredients:sugar"
+      "item": "minecraft:sugar"
     }
   ],
   "result": {
